--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   </div>
                   <div class="data">
                     <p class="semi-bold">Linkedin</p>
-                    <p>Link to <a href="www.linkedin.com/in/johanaafricano">linkedin profile</a></p>
+                    <p>Link to <a href="www.linkedin.com/in/brayanrayo">linkedin profile</a></p>
                   </div>
                 </li>
               </ul>
